# gns3-copilot

./: .clinerules  LICENSE  PNETLAB_IMPLEMENTATION_CHECKLIST.md  README.md  README_EN.md  README_ZH.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  pages-build-deployment.yaml
docs/: README_ZH.md  index.md  index_ZH.md  project-announcement_ZH.md
docs/architecture/: index_ZH.md
docs/development/: index_ZH.md
docs/technical/: index_ZH.md
docs/user/: index_ZH.md
scripts/: auto_commit.py  auto_update_docs.py
src/gns3_copilot/: __init__.py  app.py  main.py
src/gns3_copilot/agent/: __init__.py  checkpoint_utils.py  gns3_copilot.py  model_factory.py  unified_agent.py
src/gns3_copilot/gns3_client/: __init__.py  connector_factory.py  custom_gns3fy.py  gns3_create_drawing.py  gns3_delete_drawing.py  gns3_file_index.py  gns3_get_drawings.py  gns3_get_nodes.py  gns3_project_create.py  gns3_project_delete.py  gns3_project_list_files.py  gns3_project_lock.py  gns3_project_open.py  gns3_project_path.py  gns3_project_read_file.py  gns3_project_update.py  gns3_project_write_file.py  gns3_projects_list.py  gns3_topology_reader.py  gns3_update_drawing.py
src/gns3_copilot/log_config/: __init__.py  logging_config.py
src/gns3_copilot/prompts/: __init__.py  base_prompt.py  drawing_prompt.py  english_level_prompt_a1.py  english_level_prompt_a2.py  english_level_prompt_b1.py  english_level_prompt_b2.py  english_level_prompt_c1.py  english_level_prompt_c2.py  experiment_prompt.py  linux_specialist_prompt.py  notes_prompt.py  prompt_loader.py  title_prompt.py  vocie_prompt.py  voice_prompt_english_level_a1.py  voice_prompt_english_level_a2.py  voice_prompt_english_level_b1.py  voice_prompt_english_level_b2.py  voice_prompt_english_level_c1.py  voice_prompt_english_level_c2.py
src/gns3_copilot/tools_v2/: __init__.py  config_tools_nornir.py  display_tools_nornir.py  gns3_create_area_drawing.py  gns3_create_link.py  gns3_create_node.py  gns3_get_node_temp.py  gns3_start_node.py  linux_tools_nornir.py  vpcs_tools_telnetlib3.py
src/gns3_copilot/ui_model/: __init__.py  chat.py  help.py  reading.py  settings.py  sidebar.py
src/gns3_copilot/ui_model/styles/: __init__.py
src/gns3_copilot/ui_model/utils/: __init__.py  app_ui.py  chat_helpers.py  config_manager.py  gns3_checker.py  iframe_viewer.py  llm_providers.py  notes_manager.py  project_manager_ui.py  update_ui.py  updater.py
src/gns3_copilot/utils/: __init__.py  app_config.py  config_db.py  get_gns3_device_port.py  gns3_drawing_utils.py  openai_stt.py  openai_tts.py  parse_tool_content.py
tests/: conftest.py  test_setup.py
tests/agent/: test_checkpoint_utils.py
tests/gns3_client/: test_connector_factory.py  test_custom_gns3fy_extended.py  test_gns3_client_comprehensive.py  test_gns3_file_index.py  test_gns3_project_create.py  test_gns3_project_delete.py  test_gns3_project_lock.py  test_gns3_project_open.py  test_gns3_project_path.py  test_gns3_project_read_file.py  test_gns3_project_update.py  test_gns3_project_write_file.py
tests/log_config/: test_log_config.py
tests/prompts/: test_prompts.py
tests/public_model/: test_public_model.py
tests/reference_file/gns3/: gns3-project-list.py
tests/tools_v2/: __init__.py  test_config_tools_nornir.py  test_display_tools_nornir.py  test_gns3_area_drawing.py  test_gns3_create_link.py  test_gns3_create_node.py  test_gns3_drawing_tools.py  test_gns3_get_node_temp.py  test_gns3_start_node.py  test_linux_tools_nornir.py  test_vpcs_tools_telnetlib3.py
tests/ui_model/: test_llm_providers.py
